force-app/main/default/objects/Opportunity/fields/Initial_Interview_Done__c.field-meta.xml
<CustomField>
    <fullName>Initial_Interview_Done__c</fullName>
    <label>Initial Interview Done</label>
    <type>Date</type>
</CustomField>