force-app/main/default/objects/Opportunity/fields/One_time_activity__c.field-meta.xml
<CustomField>
    <fullName>One_time_activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One time activity</label>
    <type>Checkbox</type>
</CustomField>