force-app/main/default/objects/Opportunity/fields/Proposed_Scan_Created__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Scan_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposed Scan Created</label>
    <type>Checkbox</type>
</CustomField>