force-app/main/default/objects/Opportunity/fields/RSD_ClosedBy__c.field-meta.xml
<CustomField>
    <fullName>RSD_ClosedBy__c</fullName>
    <label>ClosedBy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dummy Value 1</fullName>
            </value>
            <value>
                <fullName>Dummy Value 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>