force-app/main/default/objects/Opportunity/fields/Test_Name_Profile__c.field-meta.xml
<CustomField>
    <fullName>Test_Name_Profile__c</fullName>
    <formula>$Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Name Profile</label>
    <type>Text</type>
</CustomField>