force-app/main/default/objects/Opportunity/fields/X120_After_RCD__c.field-meta.xml
<CustomField>
    <fullName>X120_After_RCD__c</fullName>
    <formula>CloseDate  + 120</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>120 After RCD</label>
    <type>Date</type>
</CustomField>