force-app/main/default/objects/Opportunity/recordTypes/Trail_Record_type.recordType-meta.xml
<RecordType>
    <fullName>Trail_Record_type</fullName>
    <active>true</active>
    <businessProcess>Retail Sales</businessProcess>
    <label>Trail Record type</label>
</RecordType>