force-app/main/default/objects/Opportunity/validationRules/Opportunity_Claudia.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Claudia</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(StageName) = &quot;Closed Lost&quot; &amp;&amp; ISBLANK( TEXT(RSD_ClosedBy__c))</errorConditionFormula>
    <errorMessage>Feld ClosedBy  ausfüllen !</errorMessage>
</ValidationRule>