force-app/main/default/objects/Opportunity/validationRules/OpportunityStage_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>OpportunityStage_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Case(   StageName ,&quot;Start&quot; ,1,
&quot;Qualifiziertes Vertriebsgespräch&quot; ,2,
&quot;Analyse Kundensituation&quot;,3,
&quot;Abschluss&quot;,4,
&quot;Closed Won&quot; ,5,
&quot;Closed Lost&quot;,6,0)  &lt; Case(    PRIORVALUE(StageName)  ,    &quot;	Start&quot; ,1,
&quot;Qualifiziertes Vertriebsgespräch&quot; ,2,
&quot;Analyse Kundensituation&quot;,3,
&quot;Abschluss&quot;,4,
&quot;Closed Won&quot; ,5,
&quot;Closed Lost&quot;,6, 0)</errorConditionFormula>
    <errorMessage>New opportunity should start with &quot;Start&quot; stage and Stages should be selected sequentially. Cannot skip a stage</errorMessage>
</ValidationRule>